syntax = "proto3";

package Location;

service Suggestion {
  rpc InitSuggestionRequest (InitRequest) returns (InitReply);

  rpc GetSingleSuggestion (SuggestionRequest) returns (SuggestionReply);
}

message InitRequest {
  string group_name = 1;
  int32 k = 2;
  repeated string messages = 3;
}

message InitReply {
  string suggestionId = 1;
}

message SuggestionRequest {
  string suggestionId = 1;
}

message SuggestionReply {
  string suggestion = 1;
}
